--- a/src/configVars.mk.in
+++ b/src/configVars.mk.in
@@ -244,6 +244,7 @@ BUILD_ICE=@BUILD_ICE@
 BUILD_MPM=@BUILD_MPM@
 BUILD_ARCHES=@BUILD_ARCHES@
 BUILD_RADIATION=@BUILD_RADIATION@
+BUILD_WASATCH=@BUILD_WASATCH@
 
 SSTREAM_COMPAT := @SSTREAM_COMPAT@
 ifeq ($(SSTREAM_COMPAT),yes)
