This checkin adds a new component (Wasatch) to Uintah.  Wasatch uses graph theory to automatically assemble algorithms from individual "expressions."  It also uses an operator approach to discrete field operations, i.e. application of a gradient to a field.  It provides general wrapper capabilities for these "expression graphs" and exposes them as Uintah tasks.
Currently Wasatch will not be built by default.  This is to avoid
breaking other developers until we get the build system in shape.

Noteworthy changes outside of wasatch:

 - the configure stuff was changed to allow Wasatch to be turned on
   during configure.  This required me to re-run autoconf, resulting
   in numerous changes to configure since I was using a different
   version of autoconf than was previously run.

 - Modified the ups_spec.xml file to add a few more "common tags."
   Dav is working on a better way to introduce these so that we don't
   need to "pollute" this file.

 - Modified CCA/Components/Parent/ComponentFactory.cc to plug Wasatch
   in.  In doing this, I moved a header file inclusion up a bit so
   that the appropriate #define were available when including header
   files.

 - Changes to the appropriate sub.mk files to plug in the new component.

--- a/configVars.mk.in
+++ b/configVars.mk.in
@@ -244,6 +244,7 @@ BUILD_ICE=@BUILD_ICE@
 BUILD_MPM=@BUILD_MPM@
 BUILD_ARCHES=@BUILD_ARCHES@
 BUILD_RADIATION=@BUILD_RADIATION@
+BUILD_WASATCH=@BUILD_WASATCH@
 
 SSTREAM_COMPAT := @SSTREAM_COMPAT@
 ifeq ($(SSTREAM_COMPAT),yes)
