--- a/src/configVars.mk.in
+++ b/src/configVars.mk.in
@@ -96,6 +96,9 @@ IS_REDSTORM := no
 MAKE_ARCHIVES := @MAKE_ARCHIVES@
 IS_DEBUG := @DEBUG@
 
+# Set to 'yes' if Fortran is disabled:
+NO_FORTRAN := @NO_FORTRAN@
+
 MALLOC_TRACE_ON := @TRACE_ON@
 
 NEED_OSX_SYSTEMSTUBS := @NEED_OSX_SYSTEMSTUBS@
