Fixing --without-fortran.  (Some MPM optional fortran files weren't being guarded.)
M    include/sci_defs/uintah_testdefs.h.in

Added @DEF_NO_FORTRAN@ set to "#define NO_FORTRAN" if fortran disabled.
If you want to check for NO_FORTRAN, you need to 

  #include <sci_defs/uintah_defs.h> // For NO_FORTRAN

and then:

  #if !defined(NO_FORTRAN)
    ...fortran code...
  #endif

M    CCA/Components/MPM/ConstitutiveModel/ConstitutiveModelFactory.cc
M    CCA/Components/MPM/ConstitutiveModel/sub.mk

Turn off HypoElasticFortran, Kayenta, and Diamm (and fortran/ subdir)
if fortran disabled.

M    configure.ac
M    configure

- Added more specific build system variables for turning off fortran.
  (Before, only needed to turn off all of Arches.  Now need to turn off
  parts of certain components (eg: MPM)).
- Clear out fortran build variables if fortran disabled.

M    configVars.mk.in

Put NO_FORTRAN into Makefiles so it can be used to conditionally
build/not build fortran files as necessary.

--- a/configVars.mk.in
+++ b/configVars.mk.in
@@ -96,6 +96,9 @@ IS_REDSTORM := no
 MAKE_ARCHIVES := @MAKE_ARCHIVES@
 IS_DEBUG := @DEBUG@
 
+# Set to 'yes' if Fortran is disabled:
+NO_FORTRAN := @NO_FORTRAN@
+
 MALLOC_TRACE_ON := @TRACE_ON@
 
 NEED_OSX_SYSTEMSTUBS := @NEED_OSX_SYSTEMSTUBS@
